# rt1w

./: CMakeLists.txt
src/: CMakeLists.txt  camera.cpp  camera.h  hittable.h  main.cpp  main.h  ray.cpp  ray.h  sphere.cpp  vectors.cpp  vectors.h
src/hittables/: CMakeLists.txt  hittable.h  scene.cpp  scene.h  sphere.cpp  sphere.h
src/materials/: CMakeLists.txt  materials.h
src/utils/: CMakeLists.txt  bmp.c  bmp.h  rand_utils.cpp  rand_utils.h
tst/: test_vectors.c  tst_main.c
